# zikh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dune-project  zikh.opam
.github/workflows/: release.yml
lib/: discover.ml  dune  execute.ml  exif.ml  metadata.ml  plan.ml  types.ml  validate.ml
man/: zikh.1
tests/: dune  test_integration.ml  test_planning.ml  test_validation.ml
